--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -257,13 +257,23 @@
 
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
+\newcommand{\tyleftprod}{\mathsf{l}_{\times}}
+
+\newcommand{\tyleftsum}{\mathsf{l}_{+}}
+
 \newcommand{\typarampos}{\alpha}
 
 \newcommand{\typepos}{\mathsf{TypePos}}
 
+\newcommand{\typeposfield}{F_T}
+
 \newcommand{\types}{\mathsf{Types}}
 
 \newcommand{\tyrespos}{\nu}
+
+\newcommand{\tyrightprod}{\mathsf{r}_{\times}}
+
+\newcommand{\tyrightsum}{\mathsf{r}_{+}}
 
 \newcommand{\unfold}[2]{#1\uparrow^{#2}}
 
