--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -195,7 +195,7 @@
 
 \newcommand{\relctxs}{\mathsf{RelCtxs}}
 
-\newcommand{\reltypes}{\mathsf{RelTypes}}
+\newcommand{\reltypes}{T_{R}}
 
 \newcommand{\reltypespos}[3]{\mathsf{RelTypes}[ #1, #2, #3 ]}
 
@@ -263,7 +263,7 @@
 
 \newcommand{\typarampos}{\alpha}
 
-\newcommand{\typepos}{\mathsf{TypePos}}
+\newcommand{\typepos}{F_T^{*}}
 
 \newcommand{\typeposfield}{F_T}
 
